--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "celiagomezdev",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Portfolio website",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^2.22.15",
+    "gatsby-plugin-manifest": "^2.4.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -23,7 +24,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/celiagomezdev/celiagomezdev.git"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
