--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "gatsby": "^2.22.15",
     "gatsby-plugin-manifest": "^2.4.10",
+    "gatsby-plugin-sass": "^2.3.3",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
