--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^2.22.15",
+    "gatsby-plugin-layout": "^1.3.6",
     "gatsby-plugin-manifest": "^2.4.10",
     "gatsby-plugin-sass": "^2.3.3",
     "node-sass": "^4.14.1",
