--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "gatsby": "^2.22.15",
     "gatsby-plugin-layout": "^1.3.6",
     "gatsby-plugin-manifest": "^2.4.10",
