--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gatsby-plugin-sass": "^2.3.3",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.10.1",
