--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "classnames": "^2.2.6",
@@ -26,13 +26,19 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.10.1",
-    "babel-preset-gatsby": "^0.4.9",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "babel-jest": "^26.6.1",
+    "babel-preset-gatsby": "^0.4.12",
     "eslint": "^7.2.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.20.0",
     "gatsby-plugin-eslint": "^2.0.8",
-    "prettier": "2.0.5"
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.1",
+    "prettier": "2.0.5",
+    "react-test-renderer": "^17.0.1"
   },
   "repository": {
     "type": "git",
