--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.20.0",
     "gatsby-plugin-eslint": "^2.0.8",
+    "husky": "^5.0.0-beta.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.1",
     "prettier": "2.0.5",
