--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "gatsby": "^2.22.15",
     "gatsby-plugin-layout": "^1.3.6",
     "gatsby-plugin-manifest": "^2.4.10",
+    "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sass": "^2.3.3",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
